tests/error/type_errors/return_mismatch.err
Guppy compilation failed. Error in file $FILE:6

4:    @guppy(compile=True)
5:    def foo() -> bool:
6:        return 42
                 ^^
GuppyTypeError: Expected return value of type `bool`, got `int`
